fix double scroll

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -54,7 +54,7 @@
 }
 
 .page-enter-active {
-  animation: fade-in-up1 ease .7s forwards;
+  animation: fade-in-up1 ease 1s forwards;
   &:before{
     content: '';
     position: fixed;
@@ -69,14 +69,14 @@
 }
 
 .page-leave-active {
-  animation: fade-in-up2 ease .7s forwards;
+  animation: fade-in-up2 ease 1s forwards;
   &:before{
     content: '';
     position: fixed;
-    top: -110%;
+    top: -100%;
     left: 0;
     width: 100%;
-    height: 110%;
+    height: 100%;
     background-color: $contrast;
     z-index: 100;
     opacity: 1;
@@ -85,7 +85,7 @@
 
 @keyframes fade-in-up1 {
   from {
-    transform: translateY(100vh);
+    transform: translateY(100%);
   }
   to {
     transform: translateY(0);
@@ -97,7 +97,7 @@
     transform: translateY(0);
   }
   to {
-    transform: translateY(100vh);
+    transform: translateY(100%);
   }
 }
 
